chore : add test env keys

--- a/.env.development.local
+++ b/.env.development.local
@@ -1,2 +1,5 @@
 # Internal Configurations
 DATABASE_URL=postgres://localhost:5432/inverse_backend?sslmode=disable
+PORT=7090
+OPENAI_API_KEY=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
+STABILITY_API_KEY=sk-Jy9ceYarmA4cGjXiaLqoGUVQYZdxM1oDCMms6cfk6bLfEd4r
