feat : add mailing support

--- a/.env.development.local
+++ b/.env.development.local
@@ -3,3 +3,6 @@ DATABASE_URL=postgres://localhost:5432/inverse_backend?sslmode=disable
 PORT=7090
 OPENAI_API_KEY=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
 STABILITY_API_KEY=sk-Jy9ceYarmA4cGjXiaLqoGUVQYZdxM1oDCMms6cfk6bLfEd4r
+# Mailgun Configuration
+MAILGUN_DOMAIN=getabacus.app
+MAILGUN_API_KEY=58625c499783e276e5f7e74ed5236611-a2b91229-824a61ce
