--- a/.env.development.local
+++ b/.env.development.local
@@ -8,3 +8,5 @@ MAILGUN_DOMAIN=getabacus.app
 MAILGUN_API_KEY=58625c499783e276e5f7e74ed5236611-a2b91229-824a61ce
 # Twitter Configuration
 TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAK87oQEAAAAAz8%2FqVFHTzKmXNPQxLGMJh%2FiNjqc%3DuE5fAr73lfMxxLAfWOren1iN2eYINEm80MRB9A2J20hjkA3YUu
+# Telegram Configuration
+TELEGRAM_BOT_TOKEN=5423502571:AAGGv2XaYgM_kqjuicFljd_YDCEGXWSvevQ
