--- a/.env.development.local
+++ b/.env.development.local
@@ -13,4 +13,5 @@ TELEGRAM_BOT_TOKEN=5423502571:AAGGv2XaYgM_kqjuicFljd_YDCEGXWSvevQ
 
 INVERSE_FACTORY_ADDRESS=0x095654d842262944a0e2d93E1D8394C5d459255a
 RPC_PROVIDER=wss://polygon-mumbai.g.alchemy.com/v2/SjkYprQJA0Dp-5l5XpafAmqj_uoJ_A5G
-INVERSE_DEPLOYMENT_SERVER=http://localhost:9090/deploy
+INVERSE_AA_SERVER=http://localhost:9090
+INVERSE_API_BASEURL=http://localhost:7090
