--- a/.env.development.local
+++ b/.env.development.local
@@ -13,5 +13,5 @@ TELEGRAM_BOT_TOKEN=5423502571:AAGGv2XaYgM_kqjuicFljd_YDCEGXWSvevQ
 
 INVERSE_FACTORY_ADDRESS=0xcd025f5c03e2865fb04b0bec5eb18c89a84b0b81
 RPC_PROVIDER=wss://polygon-mumbai.g.alchemy.com/v2/SjkYprQJA0Dp-5l5XpafAmqj_uoJ_A5G
-INVERSE_AA_SERVER=http://localhost:9090
-INVERSE_API_BASEURL=http://localhost:7090
+INVERSE_AA_SERVER=https://inverse-aa.onrender.com
+INVERSE_API_BASEURL=https://inverse-backend.onrender.com
