--- a/.env.development.local
+++ b/.env.development.local
@@ -1,6 +1,6 @@
 # Internal Configurations
 DATABASE_URL=postgres://localhost:5432/inverse_backend?sslmode=disable
-PORT=7090
+PORT=8080
 OPENAI_API_KEY=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
 STABILITY_API_KEY=sk-Cy5PNFYTnBwYHaY3rDkTHPD9o0SULKpA6xeIMOnDPx0YjQH3
 # Mailgun Configuration
@@ -15,3 +15,6 @@ INVERSE_FACTORY_ADDRESS=0x021406A44658CAbcBc5540Ec2045123E5FDb0ca8
 RPC_PROVIDER=wss://polygon-mumbai.g.alchemy.com/v2/SjkYprQJA0Dp-5l5XpafAmqj_uoJ_A5G
 INVERSE_AA_SERVER=https://inverse-aa.onrender.com
 INVERSE_API_BASEURL=https://inverse-backend.onrender.com
+# PATREON Configuration
+PATREON_CLIENT_ID=ZyzGwQBBHiWENyhtwaYVICRhfu-2Kol-Cmoi2G3nDWz6HjcJEx0-rW8vYxWU_wYP
+PATREON_CLIENT_SECRET=b7iEw16xvSgAkksJstYXM0Km7BEv7O_A27jXCrL-tnQFsXxxty17dScHmyNYwTF5
