feat : implement midjourney api query

--- a/.env.development.local
+++ b/.env.development.local
@@ -18,3 +18,5 @@ INVERSE_API_BASEURL=https://inverse-backend.onrender.com
 # PATREON Configuration
 PATREON_CLIENT_ID=ZyzGwQBBHiWENyhtwaYVICRhfu-2Kol-Cmoi2G3nDWz6HjcJEx0-rW8vYxWU_wYP
 PATREON_CLIENT_SECRET=b7iEw16xvSgAkksJstYXM0Km7BEv7O_A27jXCrL-tnQFsXxxty17dScHmyNYwTF5
+
+MIDJOURNEY_API_KEY=2b3e9a6b-56d4-4702-8da7-d81b1b00fb6e
