--- a/.env.development.local
+++ b/.env.development.local
@@ -12,7 +12,7 @@ TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAK87oQEAAAAAz8%2FqVFHTzKmXNPQxLGMJh%2Fi
 TELEGRAM_BOT_TOKEN=5423502571:AAGGv2XaYgM_kqjuicFljd_YDCEGXWSvevQ
 # Onchiain Configuration
 INVERSE_FACTORY_ADDRESS=0x021406A44658CAbcBc5540Ec2045123E5FDb0ca8
-RPC_PROVIDER=wss://polygon-mumbai.g.alchemy.com/v2/SjkYprQJA0Dp-5l5XpafAmqj_uoJ_A5G
+RPC_PROVIDER=wss://polygon-mainnet.g.alchemy.com/v2/JKEn31gUjMUuyOjgCGpTNS-fJnGp-mYF
 INVERSE_AA_SERVER=https://inverse-aa.onrender.com
 INVERSE_API_BASEURL=https://inverse-backend.onrender.com
 # PATREON Configuration
