--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 databases:
-  - name: silver-arrow-staging-db
+  - name: inverse-staging-db
     plan: starter
   
 services:
   - type: web
-    name: silver-arrow-staging
+    name: inverse-staging
     env: go
     region: oregon
     buildCommand: ./render-build.sh
@@ -13,7 +13,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: silver-arrow-staging-db
+          name: inverse-staging-db
           property: connectionString
       - key: APP_ENV
         sync: false
@@ -21,31 +21,35 @@ services:
         sync: false
       - key: GITHUB_USER
         sync: false
-      - key: POLYGON_MUMBAI_NODE_URL
+      - key: OPENAI_API_KEY
         sync: false
-      - key: PAYMASTER_URL
+      - key: STABILITY_API_KEY
         sync: false
-      - key: ENTRY_POINT
+      - key: MAILGUN_DOMAIN
         sync: false
-      - key: DEFAULT_VALIDATOR
+      - key: MAILGUN_API_KEY
         sync: false
-      - key: VALIDATOR_ADDRESS
+      - key: INVERSE_FACTORY_ADDRESS
         sync: false
-      - key: USE_PAYMASTER
+      - key: RPC_PROVIDER
         sync: false
-      - key: TURNKEY_KEY
+      - key: POLYGON_RPC_PROVIDER
         sync: false
-      - key: TURNKEY_API_KEY_NAME
+      - key: BASE_RPC_PROVIDER
         sync: false
-      - key: TURNKEY_HOST
+      - key: INVERSE_AA_SERVER
         sync: false
-      - key: KERNEL_FACTORY_ADDRESS
+      - key: INVERSE_API_BASEURL
         sync: false
-      - key: TK_KEYS_DIR
+      - key: MIDJOURNEY_API_KEY
         sync: false
-      - key: TK_KEYS_NAME
+      - key: PRIVY_APP_ID
         sync: false
-      - key: USE_AUTH
+      - key: PRIVY_APP_SECRET
         sync: false
-      - key: OPTIMISM_NODE_URL
+      - key: PRIVY_VERIFICATION_KEY
+        sync: false
+      - key: STRIPE_SECRET_KEY
+        sync: false
+      - key: STRIPE_WEBHOOK_SECRET
         sync: false
