update render.yaml file

--- a/render.staging.yaml
+++ b/render.staging.yaml
@@ -8,7 +8,7 @@ services:
     env: go
     region: oregon
     buildCommand: ./render-build.sh
-    startCommand: ./silver-arrow
+    startCommand: ./inverse
     healthCheckPath: /
     envVars:
       - key: DATABASE_URL
@@ -37,9 +37,9 @@ services:
         sync: false
       - key: BASE_RPC_PROVIDER
         sync: false
-      - key: INVERSE_AA_SERVER
+      - key: AA_SERVER
         sync: false
-      - key: INVERSE_API_BASEURL
+      - key: API_BASE_URL
         sync: false
       - key: MIDJOURNEY_API_KEY
         sync: false
@@ -49,7 +49,5 @@ services:
         sync: false
       - key: PRIVY_VERIFICATION_KEY
         sync: false
-      - key: STRIPE_SECRET_KEY
-        sync: false
-      - key: STRIPE_WEBHOOK_SECRET
+      - key: LOG_LEVEL
         sync: false
