--- a/.env.development.local
+++ b/.env.development.local
@@ -15,7 +15,7 @@ INVERSE_FACTORY_ADDRESS=0x021406A44658CAbcBc5540Ec2045123E5FDb0ca8
 RPC_PROVIDER=wss://polygon-mainnet.g.alchemy.com/v2/JKEn31gUjMUuyOjgCGpTNS-fJnGp-mYF
 POLYGON_RPC_PROVIDER=https://polygon-mainnet.g.alchemy.com/v2/JKEn31gUjMUuyOjgCGpTNS-fJnGp-mYF
 BASE_RPC_PROVIDER=https://base-mainnet.g.alchemy.com/v2/2jx1c05x5vFN7Swv9R_ZJKKAXZUfas8A
-INVERSE_AA_SERVER=https://inverse-aa.onrender.com
+AA_SERVER=https://inverse-aa.onrender.com
 INVERSE_API_BASEURL=https://inverse-backend.onrender.com
 # PATREON Configuration
 PATREON_CLIENT_ID=ZyzGwQBBHiWENyhtwaYVICRhfu-2Kol-Cmoi2G3nDWz6HjcJEx0-rW8vYxWU_wYP
