--- a/render.production.yaml
+++ b/render.production.yaml
@@ -1,10 +1,10 @@
 databases:
-  - name: inverse-staging-db
+  - name: lucid-nft-db
     plan: starter
   
 services:
   - type: web
-    name: inverse-staging
+    name: lucid-nft-backend
     env: go
     region: oregon
     buildCommand: ./render-build.sh
@@ -13,7 +13,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: inverse-staging-db
+          name: lucid-nft-db
           property: connectionString
       - key: APP_ENV
         sync: false
