--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 databases:
-  - name: inverse-staging-db
+  - name: lucid-nft-db
     plan: starter
   
 services:
   - type: web
-    name: inverse-staging
+    name: lucid-nft-backend
     env: go
     region: oregon
     buildCommand: ./render-build.sh
@@ -13,7 +13,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: inverse-staging-db
+          name: lucid-nft-db
           property: connectionString
       - key: APP_ENV
         sync: false
@@ -39,7 +39,7 @@ services:
         sync: false
       - key: AA_SERVER
         sync: false
-      - key: API_BASE_URL
+      - key: INVERSE_API_BASEURL
         sync: false
       - key: MIDJOURNEY_API_KEY
         sync: false
@@ -49,5 +49,7 @@ services:
         sync: false
       - key: PRIVY_VERIFICATION_KEY
         sync: false
-      - key: LOG_LEVEL
+      - key: STRIPE_SECRET_KEY
+        sync: false
+      - key: STRIPE_WEBHOOK_SECRET
         sync: false
