--- a/.env.test.local
+++ b/.env.test.local
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://localhost:5432/inverse_test?sslmode=disable
+DATABASE_URL=postgres://localhost:5432/lucid_nft_test?sslmode=disable
